increased spi baud rate, was unnecessarily low

--- a/spi-lcd.ioc
+++ b/spi-lcd.ioc
@@ -276,7 +276,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_DISPLAY_Init-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,10-MX_DISPLAY_Process-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_DISPLAY_Init-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,8-MX_DISPLAY_Process-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -360,11 +360,11 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CLKPhase=SPI_PHASE_1EDGE
 SPI1.CLKPolarity=SPI_POLARITY_LOW
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CalculateBaudRate=4.5 MBits/s
+SPI1.CalculateBaudRate=36.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CRCCalculation,CLKPhase
