--- a/spi-lcd.ioc
+++ b/spi-lcd.ioc
@@ -375,7 +375,10 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BoardOoPartJjDISPLAY_Checked=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DISPLAYCcBoardOoPartJjLCDJjILI9341=SPI
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DISPLAYCcDeviceJjApplication=CustomIiApplication
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DeviceJjDISPLAY_Checked=true
-STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=DISPLAYCcBoardOoPartJjLCDJjILI9341,DISPLAYCcDeviceJjApplication
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=DISPLAYCcBoardOoPartJjLCDJjILI9341,DISPLAYCcDeviceJjApplication,p_display_te_event_source,p_display_big_endian,p_display_cache_lines
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_big_endian=false
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_cache_lines=16
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_te_event_source=TE_SRC_DISABLED
 STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.STBoard=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.api=Unknown
 STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.component=
