cleaned out DMA refs for now, gonna focus on more important things

--- a/spi-lcd.ioc
+++ b/spi-lcd.ioc
@@ -2,18 +2,6 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=SPI1_TX
-Dma.RequestsNb=1
-Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_TX.0.Instance=DMA2_Stream3
-Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.0.Mode=DMA_NORMAL
-Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
@@ -22,15 +10,14 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F756ZGT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=DMA
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=USART3
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F756ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -82,7 +69,6 @@ Mcu.UserName=STM32F756ZGTx
 MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -276,7 +262,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_DISPLAY_Init-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,8-MX_DISPLAY_Process-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_DISPLAY_Init-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,7-MX_DISPLAY_Process-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -367,7 +353,8 @@ SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
 SPI1.CalculateBaudRate=36.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CRCCalculation,CLKPhase
+SPI1.FirstBit=SPI_FIRSTBIT_MSB
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CRCCalculation,CLKPhase,FirstBit
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BSP.number=4
@@ -375,9 +362,10 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BoardOoPartJjDISPLAY_Checked=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DISPLAYCcBoardOoPartJjLCDJjILI9341=SPI
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DISPLAYCcDeviceJjApplication=CustomIiApplication
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DeviceJjDISPLAY_Checked=true
-STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=DISPLAYCcBoardOoPartJjLCDJjILI9341,DISPLAYCcDeviceJjApplication,p_display_te_event_source,p_display_big_endian,p_display_cache_lines
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=p_display_te_event_source,p_display_big_endian,p_display_cache_lines,DISPLAYCcBoardOoPartJjLCDJjILI9341,DISPLAYCcDeviceJjApplication,p_display_swap_rb
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_big_endian=false
-STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_cache_lines=16
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_cache_lines=8
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_swap_rb=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_te_event_source=TE_SRC_DISABLED
 STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.STBoard=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.api=Unknown
