progress towards enabling the one big buffer approach

--- a/spi-lcd.ioc
+++ b/spi-lcd.ioc
@@ -362,7 +362,7 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BoardOoPartJjDISPLAY_Checked=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DISPLAYCcBoardOoPartJjLCDJjILI9341=SPI
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DISPLAYCcDeviceJjApplication=CustomIiApplication
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DeviceJjDISPLAY_Checked=true
-STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=p_display_te_event_source,p_display_big_endian,p_display_cache_lines,DISPLAYCcBoardOoPartJjLCDJjILI9341,DISPLAYCcDeviceJjApplication,p_display_swap_rb
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=p_display_te_event_source,p_display_big_endian,p_display_cache_lines,p_display_swap_rb,DISPLAYCcBoardOoPartJjLCDJjILI9341,DISPLAYCcDeviceJjApplication
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_big_endian=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_cache_lines=8
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_swap_rb=false
