established timer interrupt to push gfx to screen, cleaned up some interfaces, and extracted test app code out of the dodgy MX files

--- a/spi-lcd.ioc
+++ b/spi-lcd.ioc
@@ -15,9 +15,10 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
-Mcu.IP6=USART3
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP6=TIM2
+Mcu.IP7=USART3
+Mcu.IP8=USB_OTG_FS
+Mcu.IPNb=9
 Mcu.Name=STM32F756ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -53,15 +54,16 @@ Mcu.Pin35=PB7
 Mcu.Pin36=PB8
 Mcu.Pin37=PB9
 Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
+Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin40=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_DeviceJjDISPLAY_3.0.0_3.0.0
+Mcu.Pin40=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
+Mcu.Pin41=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_DeviceJjDISPLAY_3.0.0_3.0.0
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=41
+Mcu.PinsNb=42
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -78,6 +80,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
@@ -409,6 +412,10 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.semaphore=
 STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.solution=PF12
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_IsPackSelfContextualization=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_SwParameter=DISPLAYCcBoardOoPartJjLCDJjILI9341\:SPI;DISPLAYCcDeviceJjApplication\:CustomIiApplication;
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.IPParameters=Period,AutoReloadPreload,Prescaler
+TIM2.Period=16667
+TIM2.Prescaler=72-1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -419,6 +426,8 @@ VP_STMicroelectronics.X-CUBE-DISPLAY_VS_DeviceJjDISPLAY_3.0.0_3.0.0.Mode=DeviceJ
 VP_STMicroelectronics.X-CUBE-DISPLAY_VS_DeviceJjDISPLAY_3.0.0_3.0.0.Signal=STMicroelectronics.X-CUBE-DISPLAY_VS_DeviceJjDISPLAY_3.0.0_3.0.0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-F756ZG
 boardIOC=true
 isbadioc=false
