fixes and improvements etc

--- a/spi-lcd.ioc
+++ b/spi-lcd.ioc
@@ -57,13 +57,12 @@ Mcu.Pin38=VP_SYS_VS_Systick
 Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin40=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
-Mcu.Pin41=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_DeviceJjDISPLAY_3.0.0_3.0.0
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=42
+Mcu.PinsNb=41
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -265,7 +264,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_DISPLAY_Init-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,7-MX_DISPLAY_Process-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_DISPLAY_Init-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,9-MX_DISPLAY_Process-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -363,9 +362,8 @@ SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BSP.number=4
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BoardOoPartJjDISPLAY_Checked=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DISPLAYCcBoardOoPartJjLCDJjILI9341=SPI
-STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DISPLAYCcDeviceJjApplication=CustomIiApplication
-STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DeviceJjDISPLAY_Checked=true
-STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=p_display_te_event_source,p_display_big_endian,p_display_cache_lines,p_display_swap_rb,DISPLAYCcBoardOoPartJjLCDJjILI9341,DISPLAYCcDeviceJjApplication
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DeviceJjDISPLAY_Checked=false
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=p_display_te_event_source,p_display_big_endian,p_display_cache_lines,p_display_swap_rb,DISPLAYCcBoardOoPartJjLCDJjILI9341
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_big_endian=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_cache_lines=8
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_display_swap_rb=false
@@ -422,8 +420,6 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0.Mode=BoardOoPartJjDISPLAY
 VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0.Signal=STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
-VP_STMicroelectronics.X-CUBE-DISPLAY_VS_DeviceJjDISPLAY_3.0.0_3.0.0.Mode=DeviceJjDISPLAY
-VP_STMicroelectronics.X-CUBE-DISPLAY_VS_DeviceJjDISPLAY_3.0.0_3.0.0.Signal=STMicroelectronics.X-CUBE-DISPLAY_VS_DeviceJjDISPLAY_3.0.0_3.0.0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
