--- a/spi-lcd.ioc
+++ b/spi-lcd.ioc
@@ -29,40 +29,46 @@ Mcu.Pin12=PC5
 Mcu.Pin13=PB0
 Mcu.Pin14=PF12
 Mcu.Pin15=PF13
-Mcu.Pin16=PE9
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PD8
+Mcu.Pin16=PF14
+Mcu.Pin17=PF15
+Mcu.Pin18=PE9
+Mcu.Pin19=PE11
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PD9
-Mcu.Pin21=PD14
-Mcu.Pin22=PD15
-Mcu.Pin23=PG6
-Mcu.Pin24=PG7
-Mcu.Pin25=PA8
-Mcu.Pin26=PA9
-Mcu.Pin27=PA10
-Mcu.Pin28=PA11
-Mcu.Pin29=PA12
+Mcu.Pin20=PE13
+Mcu.Pin21=PB13
+Mcu.Pin22=PB14
+Mcu.Pin23=PD8
+Mcu.Pin24=PD9
+Mcu.Pin25=PD14
+Mcu.Pin26=PD15
+Mcu.Pin27=PG6
+Mcu.Pin28=PG7
+Mcu.Pin29=PA8
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PA13
-Mcu.Pin31=PA14
-Mcu.Pin32=PG11
-Mcu.Pin33=PG13
-Mcu.Pin34=PB3
-Mcu.Pin35=PB7
-Mcu.Pin36=PB8
-Mcu.Pin37=PB9
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA11
+Mcu.Pin33=PA12
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=PG9
+Mcu.Pin37=PG11
+Mcu.Pin38=PG13
+Mcu.Pin39=PG14
 Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin40=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
+Mcu.Pin40=PB3
+Mcu.Pin41=PB7
+Mcu.Pin42=PB8
+Mcu.Pin43=PB9
+Mcu.Pin44=VP_SYS_VS_Systick
+Mcu.Pin45=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin46=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=41
+Mcu.PinsNb=47
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -196,7 +202,17 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PE9.GPIOParameters=PinState
+PE11.GPIOParameters=GPIO_Label
+PE11.GPIO_Label=KEYPAD_C2
+PE11.Locked=true
+PE11.Signal=GPIO_Output
+PE13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE13.GPIO_Label=KEYPAD_R4
+PE13.GPIO_PuPd=GPIO_PULLDOWN
+PE13.Locked=true
+PE13.Signal=GPIO_Input
+PE9.GPIOParameters=PinState,GPIO_Label
+PE9.GPIO_Label=KEYPAD_C3
 PE9.Locked=true
 PE9.PinState=GPIO_PIN_SET
 PE9.Signal=GPIO_Output
@@ -204,10 +220,20 @@ PF12.GPIOParameters=GPIO_Label
 PF12.GPIO_Label=LCD_DC
 PF12.Locked=true
 PF12.Signal=GPIO_Output
-PF13.GPIOParameters=PinState
+PF13.GPIOParameters=PinState,GPIO_Label
+PF13.GPIO_Label=KEYPAD_C4
 PF13.Locked=true
 PF13.PinState=GPIO_PIN_SET
 PF13.Signal=GPIO_Output
+PF14.GPIOParameters=GPIO_Label
+PF14.GPIO_Label=KEYPAD_C1
+PF14.Locked=true
+PF14.Signal=GPIO_Output
+PF15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PF15.GPIO_Label=KEYPAD_R3
+PF15.GPIO_PuPd=GPIO_PULLDOWN
+PF15.Locked=true
+PF15.Signal=GPIO_Input
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
@@ -216,6 +242,11 @@ PG13.GPIOParameters=GPIO_Label
 PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
 PG13.Signal=ETH_TXD0
+PG14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG14.GPIO_Label=KEYPAD_R2
+PG14.GPIO_PuPd=GPIO_PULLDOWN
+PG14.Locked=true
+PG14.Signal=GPIO_Input
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -224,6 +255,11 @@ PG7.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=USB_OverCurrent [STMPS2151STR_FAULT]
 PG7.Locked=true
 PG7.Signal=GPIO_Input
+PG9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG9.GPIO_Label=KEYPAD_R1
+PG9.GPIO_PuPd=GPIO_PULLDOWN
+PG9.Locked=true
+PG9.Signal=GPIO_Input
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
 PH0/OSC_IN.Locked=true
@@ -264,7 +300,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_DISPLAY_Init-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,9-MX_DISPLAY_Process-STMicroelectronics.X-CUBE-DISPLAY.3.0.0-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
