--- a/spi-lcd.ioc
+++ b/spi-lcd.ioc
@@ -16,59 +16,62 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
-Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP7=TIM9
+Mcu.IP8=USART3
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F756ZGTx
 Mcu.Package=LQFP144
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PC5
-Mcu.Pin13=PB0
-Mcu.Pin14=PF12
-Mcu.Pin15=PF13
-Mcu.Pin16=PF14
-Mcu.Pin17=PF15
-Mcu.Pin18=PE9
-Mcu.Pin19=PE11
-Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PE13
-Mcu.Pin21=PB13
-Mcu.Pin22=PB14
-Mcu.Pin23=PD8
-Mcu.Pin24=PD9
-Mcu.Pin25=PD14
-Mcu.Pin26=PD15
-Mcu.Pin27=PG6
-Mcu.Pin28=PG7
-Mcu.Pin29=PA8
-Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PA9
-Mcu.Pin31=PA10
-Mcu.Pin32=PA11
-Mcu.Pin33=PA12
-Mcu.Pin34=PA13
-Mcu.Pin35=PA14
-Mcu.Pin36=PG9
-Mcu.Pin37=PG11
-Mcu.Pin38=PG13
-Mcu.Pin39=PG14
-Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin40=PB3
-Mcu.Pin41=PB7
-Mcu.Pin42=PB8
-Mcu.Pin43=PB9
-Mcu.Pin44=VP_SYS_VS_Systick
-Mcu.Pin45=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin46=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
-Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=47
+Mcu.Pin0=PE5
+Mcu.Pin1=PC13
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PB0
+Mcu.Pin15=PF12
+Mcu.Pin16=PF13
+Mcu.Pin17=PF14
+Mcu.Pin18=PF15
+Mcu.Pin19=PE9
+Mcu.Pin2=PC14/OSC32_IN
+Mcu.Pin20=PE11
+Mcu.Pin21=PE13
+Mcu.Pin22=PB13
+Mcu.Pin23=PB14
+Mcu.Pin24=PD8
+Mcu.Pin25=PD9
+Mcu.Pin26=PD14
+Mcu.Pin27=PD15
+Mcu.Pin28=PG6
+Mcu.Pin29=PG7
+Mcu.Pin3=PC15/OSC32_OUT
+Mcu.Pin30=PA8
+Mcu.Pin31=PA9
+Mcu.Pin32=PA10
+Mcu.Pin33=PA11
+Mcu.Pin34=PA12
+Mcu.Pin35=PA13
+Mcu.Pin36=PA14
+Mcu.Pin37=PG9
+Mcu.Pin38=PG11
+Mcu.Pin39=PG13
+Mcu.Pin4=PH0/OSC_IN
+Mcu.Pin40=PG14
+Mcu.Pin41=PB3
+Mcu.Pin42=PB7
+Mcu.Pin43=PB8
+Mcu.Pin44=PB9
+Mcu.Pin45=VP_SYS_VS_Systick
+Mcu.Pin46=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin47=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin48=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
+Mcu.Pin5=PH1/OSC_OUT
+Mcu.Pin6=PC1
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA5
+Mcu.PinsNb=49
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -211,6 +214,8 @@ PE13.GPIO_Label=KEYPAD_R4
 PE13.GPIO_PuPd=GPIO_PULLDOWN
 PE13.Locked=true
 PE13.Signal=GPIO_Input
+PE5.Locked=true
+PE5.Signal=S_TIM9_CH1
 PE9.GPIOParameters=PinState,GPIO_Label
 PE9.GPIO_Label=KEYPAD_C3
 PE9.Locked=true
@@ -300,7 +305,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM9_Init-TIM9-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -385,6 +390,8 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
+SH.S_TIM9_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CLKPhase=SPI_PHASE_1EDGE
 SPI1.CLKPolarity=SPI_POLARITY_LOW
@@ -451,6 +458,11 @@ TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Period,AutoReloadPreload,Prescaler
 TIM2.Period=1000-1
 TIM2.Prescaler=16-1
+TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM9.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM9.IPParameters=Period,Prescaler,AutoReloadPreload,Channel-PWM Generation1 CH1
+TIM9.Period=40909-1
+TIM9.Prescaler=4-1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -461,6 +473,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM9_VS_ClockSourceINT.Mode=Internal
+VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=NUCLEO-F756ZG
 boardIOC=true
 isbadioc=false
