separated the gfx refresh timer from the chip-8 60hz timer; the gfx test routine now serves as an intro for the emulator; added some sounds in sync with it

--- a/chip-8-stm32.ioc
+++ b/chip-8-stm32.ioc
@@ -11,15 +11,16 @@ Mcu.CPN=STM32F756ZGT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=I2C1
+Mcu.IP10=USB_OTG_FS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
-Mcu.IP7=TIM9
-Mcu.IP8=USART3
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP7=TIM3
+Mcu.IP8=TIM9
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32F756ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE5
@@ -64,14 +65,15 @@ Mcu.Pin43=PB8
 Mcu.Pin44=PB9
 Mcu.Pin45=VP_SYS_VS_Systick
 Mcu.Pin46=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin47=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin48=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
+Mcu.Pin47=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin49=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
 Mcu.Pin5=PH1/OSC_OUT
 Mcu.Pin6=PC1
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA5
-Mcu.PinsNb=49
+Mcu.PinsNb=50
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -90,6 +92,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
@@ -296,17 +299,17 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=spi-lcd.ioc
-ProjectManager.ProjectName=spi-lcd
+ProjectManager.ProjectFileName=chip-8-stm32.ioc
+ProjectManager.ProjectName=chip-8-stm32
 ProjectManager.ProjectStructure=
-ProjectManager.RegisterCallBack=
+ProjectManager.RegisterCallBack=TIM
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM9_Init-TIM9-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM9_Init-TIM9-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -457,13 +460,17 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.0_IsPackSelfContextualization=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_SwParameter=DISPLAYCcBoardOoPartJjLCDJjILI9341\:SPI;DISPLAYCcDeviceJjApplication\:CustomIiApplication;
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Period,AutoReloadPreload,Prescaler
-TIM2.Period=1000-1
-TIM2.Prescaler=16-1
+TIM2.Period=2400000-1
+TIM2.Prescaler=0
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM3.Period=1000-1
+TIM3.Prescaler=16-1
 TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM9.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM9.IPParameters=Period,Prescaler,AutoReloadPreload,Channel-PWM Generation1 CH1
-TIM9.Period=40909-1
-TIM9.Prescaler=4-1
+TIM9.Period=2273-1
+TIM9.Prescaler=72-1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -474,6 +481,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM9_VS_ClockSourceINT.Mode=Internal
 VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=NUCLEO-F756ZG
